# autogen4-sample

./: .env.sample  .gitignore  01.quickstart.ipynb  02.teams.ipynb  03.selector-group-chat.ipynb  04.swarm.ipynb  05.magentic-one.ipynb  06.travelagent.ipynb  07.research.ipynb  08.review.ipynb  09.debate.ipynb  10.code-execution.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt  sample.ipynb
.devcontainer/: README.md  devcontainer.json  post-create.sh  setup-simple.sh  setup.sh
.github/codespaces/: codespaces.yml
.github/workflows/: test.yml  update-deps.yml
