[project]
name = "autogen04-sample"
version = "0.1.0"
description = "Autogen 0.4 Sample Notebooks"
authors = [
    {name = "Andy", email = "your.email@example.com"},
]
dependencies = [
    "autogen-agentchat>=0.4.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "google-search-results>=2.4.0",
    "matplotlib>=3.0.0",
    "pandas>=2.0.0",
    "requests>=2.25.0",
]
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Since this is a samples project, we only include the notebooks and readme
include = [
    "*.ipynb",
    "README.md",
    "coding/",
]

[tool.hatch.build.targets.sdist]
include = [
    "*.ipynb",
    "README.md", 
    "coding/",
    "pyproject.toml",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
